# Introduction

./: .gitignore  404.html  Pipfile  Readme.md  index.html  mkdocs.yml  sample.env
.github/workflows/: mkdocs_publish.yml
assets/docs/amplity_markdown_files/: 2845.md  2846.md  2847.md  2848.md  2849.md  2850.md  2851.md  test.md
assets/md/: Amplity_Starter_Kit.md  Getting_Started.md  OpenAI_Check_List.md  Quality_Of_Life.md  Resources.md  TODO.md
blog/: index.html
contents/Amplity_Starter_Kit/: index.html
contents/Environment_Setup/: index.html
contents/OpenAI_Check_List/: index.html
contents/Quality_Of_Life/: index.html
contents/Resources/: index.html
docs/: index.md
docs/contents/: Amplity_Starter_Kit.md  Environment_Setup.md  OpenAI_Check_List.md  Quality_Of_Life.md
examples/crewai_starter/: README.md  pyproject.toml  report.md
examples/crewai_starter/src/crewai_starter/: crew.py  main.py
examples/crewai_starter/src/crewai_starter/config/: agents.yaml  tasks.yaml
examples/crewai_starter/src/crewai_starter/tools/: custom_tool.py
examples/crewai_starter/src/crewai_starter/utils/: file_name_generator.py
examples/streaming_xml_ui/: main.py
notebooks/: Chunking.ipynb  MarkdownSplitter.ipynb  Markdown_Streaming.ipynb  OpenAI_Introduction.ipynb  Pinecone_Retrieval_Comparison.ipynb  Simple_RAG_Application.ipynb  XML_Streaming.ipynb
search/: search_index.json
