[project]
name = "crewai_starter"
version = "0.1.0"
description = "crewai-starter using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
crewai_starter = "crewai_starter.main:run"
run_crew = "crewai_starter.main:run"
train = "crewai_starter.main:train"
replay = "crewai_starter.main:replay"
test = "crewai_starter.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
